# compress

./: .gitignore  .gitmodules  Cargo.toml  README.md
bench/: README.md  corpora.txt  fetch-corpora.sh  run.rs
reference/: pbzip2-analysis.md  xz-utils-v5.8.3-analysis.md
src/: cli.rs  error.rs  io_plan.rs  main.rs  registry.rs
src/algorithms/: mod.rs
src/algorithms/bzip2/: bitstream.rs  block.rs  bwt.rs  container.rs  crc.rs  huffman.rs  mod.rs  mtf.rs
src/algorithms/checks/: crc.rs  mod.rs  sha256.rs
src/algorithms/lzma/: mod.rs
src/algorithms/lzma2/: mod.rs
src/algorithms/xz/: mod.rs
